[PROGRAMMES-6695] “Fixed” clipstream scrolling on iOS (#817)

--- a/src/Ds2013/Css/PageSpecfic/Profiles/_clipstream.scss
+++ b/src/Ds2013/Css/PageSpecfic/Profiles/_clipstream.scss
@@ -71,6 +71,7 @@
     overflow-x: scroll;
     overflow-y: hidden;
     touch-action: pan-x;
+    -webkit-overflow-scrolling: touch;
 }
 
 .stream__button[disabled]:hover,
